# tesseract_qt

./: CMakeLists.txt
cmake/: FindFreeImage.cmake  FindOgre2.cmake  FindPkgMacros.cmake
command_language/include/tesseract_qt/command_language/models/: cartesian_waypoint_standard_item.h
common/include/tesseract_qt/common/models/: standard_item_type.h
planning/include/tesseract_qt/planning/: task_composer_context_standard_item.h
rendering/: CMakeLists.txt
rendering/ogre2/: CMakeLists.txt  readme.md
rendering/ogre2/demo/: CMakeLists.txt  knot2.mesh  ogre2_custom_widget.cpp  ogre2_custom_widget.h  ogre2_demo.cpp  ogre2_demo2.cpp
rendering/ogre2/include/tesseract_qt/rendering/ogre2/: ogre2_cameraman.h  ogre2_constants.h  ogre2_conversions.h  ogre2_input.h  ogre2_manager.h  ogre2_material.h  ogre2_prereqs.h  ogre2_renderman.h  ogre2_viewport.h  ogre2_widget.h
rendering/ogre2/include/tesseract_qt/rendering/ogre2/common/: color.h  graphics_api.h  image.h  shader_param.h  shader_params.h
rendering/ogre2/src/: basic_example.cpp  ogre2_conversions.cpp  ogre2_manager.cpp  ogre2_material.cpp  ogre2_renderman.cpp  ogre2_viewport.cpp  ogre2_widget.cpp
rendering/ogre2/src/common/: color.cpp  image.cpp  shader_param.cpp  shader_params.cpp
srdf/src/: srdf_editor_widget.cpp
